tests/NormalTests/paczka1/small_fuzzy/79133494.err
Error in line 7: ZxlmhKZS A649 82,2
Error in line 5: S133 A649 60,0
